2010-02-05  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (become_super): Use root's supplementary groups.

	* userhelper.c (passwd, chfn, wrap): Use "data" instead of
	dereferencing conv->appdata_ptr again.

	* userhelper.c (set_pam_items): New function.
	(passwd, chfn, wrap): Use pam_set_items.

2010-02-04  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (become_super): Check for failures of the system
	calls in addition to verifying the expected results.
	(become_normal): Check for failures of the system
	calls in addition to verifying the expected results.  Call setregid()
	as well.  Verify the real gid/uid values.

2009-10-05  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.102.
	* NEWS: Update.

	* consolehelper-gtk.8: New file, based on a Debian man page by
	Christopher Cramer.
	* pam-panel-icon.1: New file.
	* Makefile.am (dist_man_MANS): Add consolehelper-gtk.8 and
	pam-panel-icon.1.
	* usermount.1: Document userformat better.
	* consolehelper.8.in (BUGS): Remove text referring to
	developer.redhat.com.

2009-09-15  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.101.
	* NEWS: Update.
	* po/LINGUAS: Update.

2009-06-15  Miloslav Trmač  <mitr@redhat.com>

	* userinfo.c (create_userinfo_window, on_ok_clicked, main): Port from
	libglade to GtkBuilder.
	* userinfo.ui: New file, replaces ...
	* usermode.glade: ... this.
	* Makefile.am (EXTRA_DIST): Remove usermode.glade.
	(AM_CFLAGS): Use GTK_CFLAGS instead of LIBGLADE_CFLAGS.
	(dist_pkgdata_DATA): Rename from pkgdata_DATA.  Ship usermode.ui instead
	of usermode.glade
	(userinfo_LDADD): Use with GTK_LIBS instead of LIBGLADE_LIBS.
	* configure.ac: Remove check for libglade.  Update minimum gtk+ version
	to 2.12.
	* po/POTFILES.in: Replace usermode.glade with usermode.ui.

	* Makefile.am (EXTRA_DIST): Remove files that are marked for
	distribution using the dist_ prefix.
	(dist_bin_SCRIPTS): Rename from bin_SCRIPTS.
	(dist_man_MANS): Rename from man_MANS.